# finance-sim

./: .gitignore  README.md  main.py  prompt_plan.md  pyproject.toml  todo.md
src/: __init__.py  cli.py  data_loader.py  simulator.py  summarize.py
tests/: __init__.py  test_cli.py  test_data_loader.py  test_simulator.py  test_summarize.py
users/chad/: config.yaml  ledger.csv
users/empty_user/: config.yaml  ledger.csv
users/testuser/: config.yaml  ledger.csv
